# Uranus

./: .gitignore  LICENSE  README.md  encoder.go  go.mod  go.sum  main.go  private.key  sandbox.go
bot/: go.mod  go.sum  main.go
bot/communication/client/: client.go
bot/message/: bot.go  dataProcessing.go  encryptCCP.go  encryptRsa.go  encryption.go  incoming_message.go  orders.go  outgoing_message.go
bot/morse/: alphabet.go  morse.go  morseToWord.go  morse_to_word.go  wordToMorse.go  word_to_morse.go
bot/orders/: main.go
bot/sandbox/: sandbox.go
communicator/: incoming_message.go  outgoing_message.go
computer_details/: computer_details.go
details/: details.go
key_files/: c2_bot_public.key  c2_hq_private.key  c2_hq_public.key
maelstrom/: Cargo.toml
maelstrom/C2/src/: main.rs
maelstrom/C2/src/blockchain/: block.rs  mod.rs  sandbox.rs
maelstrom/C2/src/communication/: HQ.rs  bot.rs  c2.rs  mod.rs  server.rs
maelstrom/C2/src/encoder/: mod.rs
maelstrom/C2/src/encryption/: ChaCha20Poly1305_encryption.rs  rsa_encryption.rs
maelstrom/C2/src/message/: c2_bot_data_processing.rs  c2_hq_data_processing.rs  data_processing.rs  mod.rs
maelstrom/C2/src/morse/: mod.rs  morse_to_word.rs  word_to_morse.rs
maelstrom/msblk/: LOG
maelstrom/src/: main.rs
maelstrom/src/blockchain/: block.rs  blockchain.rs  database.rs  mod.rs  sandbox.rs
maelstrom/src/communication/: ChaCha20Poly1305_encryption.rs  HQ.rs  bot.rs  c2.rs  client.rs  data_processing.rs  encryption.rs  lib.rs  mod.rs  rsa_encryption.rs  server.rs
maelstrom/src/db/: sandbox.rs
maelstrom/src/encoder/: morse.rs
maelstrom/src/encryption/: ChaCha20Poly1305_encryption.rs  mod.rs  rsa_encryption.rs
maelstrom/src/message/: c2_hq_data_processing.rs  data_processing.rs  mod.rs  serialization.rs
maelstrom/src/morse/: morse_to_word.rs
maelstrom/src/server/: client.rs  data_processing.rs  encryption.rs  lib.rs  mod.rs  server.rs
message/: encryption.go  incoming_message.go  outgoing_message.go
(+5 files in other folders)
