[package]
name = "maelstrom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
# Client / Server communication
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
rmp-serde = "1.0.0"
serde_bytes = "0.11.5"
openssl = { version = "0.10.38", features = ["vendored"] }
base32 = "0.4.0"
rand = "0.8.5"