[package]
name = "maelstrom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Client / Server communication
futures = "0.3.21"
tokio = { version = "1.12.0", features = ["full"] }
# Serialization
serde = { version = "1.0.136", features = ["derive"] }
rmp-serde = "1.0.0"
bincode = "1.2.1"
serde_bytes = "0.11.5"
# Data processing
chacha20poly1305 = { version = "0.9.0", features = ["heapless"] }
base32 = "0.4.0"
openssl = { version = "0.10.38", features = ["vendored"] }
hex = "0.4.3"
sha3 = "0.10.1"
# Database
leveldb = "0.8.6"
tempdir = "0.3.7"
# Other
rand = "0.8.5"
deepsize = "0.2.0"
lazy_static = "1.4.0"